[FIX] More checkstyle violations